# postcat

./: .gitignore  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: sync-design.md
docs/research/: competitor-stacks.md  postman-features.md
scripts/: build.ps1  tabfit-sim.mjs
server/: Cargo.toml  Dockerfile  README.md
server/src/: db.rs  main.rs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_history.sql  0003_history_fts.sql  0004_collections.sql  0005_auth.sql  0006_scripts.sql  0007_timings.sql  0008_sync.sql  0009_host_aliases.sql  0010_error_detail.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs  oauth2.rs  sigv4.rs
src-tauri/src/collections/: mod.rs
src-tauri/src/cookies/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/host_aliases/: mod.rs
src-tauri/src/http_engine/: mod.rs  timed.rs
src-tauri/src/importers/: curl.rs  har.rs  mod.rs  openapi.rs  postman.rs
src-tauri/src/runner/: mod.rs
src-tauri/src/scripting/: mod.rs  prelude.js
src-tauri/src/settings/: mod.rs
src-tauri/src/store/: migrations.rs  mod.rs
src-tauri/src/sync/: api.rs  mod.rs  serialize.rs
src-tauri/src/vars/: mod.rs
src-tauri/src/websocket/: mod.rs
src-tauri/tests/: auth_flows.rs  collections_import.rs  engine_history.rs  history_search.rs  runner_flow.rs  timing_live.rs
src/components/: AuthEditor.tsx  BodyEditor.tsx  CodeDialog.tsx  CollectionsPanel.tsx  CommandPalette.tsx  CookieManager.tsx  DiffView.tsx  EnvBar.tsx  ErrorBoundary.tsx  ExtractDialog.tsx  GraphQLEditor.tsx  HistorySidebar.tsx  HostChip.tsx  HostsDialog.tsx  Icon.tsx  KeyValueEditor.tsx  RequestEditor.tsx  ResizeHandle.tsx  ResponseViewer.tsx  RetentionPopover.tsx  RunnerDialog.tsx  SaveDialog.tsx  ScriptsDialog.tsx  ScriptsEditor.tsx  SettingsDialog.tsx  StoredAuthDialog.tsx  SyncDialog.tsx  TabBar.tsx  TimingBar.tsx  UpdateBanner.tsx  UrlDisplay.tsx  UrlInput.tsx  VarInput.tsx  WsPanel.tsx
src/hooks/: usePersistentState.ts  usePrefersDark.ts
src/ipc/: commands.ts
src/state/: appSettings.ts  hostAliases.ts  tabs.ts  updater.ts
src/utils/: codegen.ts  curl.ts
