[package]
name = "postcat-sync"
version = "0.1.0"
description = "Self-hostable end-to-end-encrypted sync server for postcat"
edition = "2021"

[[bin]]
name = "postcat-sync"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints.clippy]
unwrap_used = "warn"
