[package]
name = "postcat"
version = "0.1.0"
description = "Local-first API client with full-text searchable request history"
edition = "2021"
default-run = "postcat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "postcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless collection runner (Newman analog).
[[bin]]
name = "postcat-cli"
path = "src/bin/postcat_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "multipart", "stream", "json", "native-tls", "blocking"] }
rquickjs = "0.6"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
futures-util = "0.3"
url = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
reqwest_cookie_store = "0.8"
tauri-plugin-dialog = "2"

[dev-dependencies]
tiny_http = "0.12"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

