[package]
name = "postcat"
version = "0.1.8"
description = "Local-first API client with full-text searchable request history"
edition = "2021"
default-run = "postcat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "postcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Headless collection runner (Newman analog).
[[bin]]
name = "postcat-cli"
path = "src/bin/postcat_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "multipart", "stream", "json", "native-tls", "blocking"] }
rquickjs = "0.6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
futures-util = "0.3"
url = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-native-tls = "0.3"
native-tls = "0.2"
flate2 = "1"
brotli = "7"
bytes = "1"
tauri-plugin-dialog = "2"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Register with the Restart Manager so Windows relaunches us after an
# update-triggered restart. Reuses the version already in the tree.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_Recovery"] }

[dev-dependencies]
tiny_http = "0.12"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

# Lighter debug info makes linking noticeably faster on Windows while still
# giving usable panic backtraces during development.
[profile.dev]
debug = "line-tables-only"

